QuerySample and sobject

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -2,7 +2,7 @@
 <h2>前準備</h2>
 <div>
 	<h3>依存性の解決</h3>
-	<p>conf/dependencies.ymlにflectSalesforceで使用するライブラリ情報を記述して「play deps」を実行します。</p>
+	<p><a href="https://github.com/shunjikonishi/salesforceClient-sample/blob/master/conf/dependencies.yml">conf/dependencies.yml</a>にflectSalesforceで使用するライブラリ情報を記述して「play deps」を実行します。</p>
 	<p>バグ修正等によりリリースバージョンよりも新しいバージョンが必要になった場合は直接libフォルダにjarファイルをコピーしてください。</p>
 </div>
 <div>
