--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,18 +17,20 @@
 			<div class="row">
 				<div class="col-md-2 ">
 					<ul>
-						<li><a href="/application/instance">インスタンス生成</a></li>
-						<li><a href="/application/instance">クエリ</a></li>
-						<li><a href="/application/instance">SObjectサブクラスの作成</a></li>
-						<li><a href="/application/instance">Create －親子関係</a></li>
-						<li><a href="/application/instance">Update - 不要なフィールドまで更新される可能性</a></li>
-						<li><a href="/application/instance">Upsert</a></li>
-						<li><a href="/application/instance">Delete</a></li>
-						<li><a href="/application/instance">SQLライクな更新</a></li>
-						<li><a href="/application/instance">SQLSync</a></li>
-						<li><a href="/application/instance">インポート</a></li>
-						<li><a href="/application/instance">エクスポート</a></li>
-						<li><a href="/application/instance">ここで説明していないものBulk, Metadata</a></li>
+						<li><a href="index">前準備</a></li>
+						<li><a href="instance">インスタンス生成</a></li>
+						<li><a href="query">クエリ</a></li>
+						<li><a href="sobject">SObject</a></li>
+						<li><a href="instance">Create －親子関係</a></li>
+						<li><a href="instance">Update - 不要なフィールドまで更新される可能性</a></li>
+						<li><a href="instance">Upsert</a></li>
+						<li><a href="instance">Delete</a></li>
+						<li><a href="instance">SQLライクな更新</a></li>
+						<li><a href="instance">インポート</a></li>
+						<li><a href="instance">エクスポート</a></li>
+						<li><a href="instance">SQLSync</a></li>
+						<li><a href="instance">ExcelReport</a></li>
+						<li><a href="instance">ここで説明していないものBulk, Metadata, OAuth</a></li>
 					</ul>
 				</div>
 				<div class="col-md-10">
