Add some contents

--- a/app/views/Application/instance.html
+++ b/app/views/Application/instance.html
@@ -1,6 +1,7 @@
 #{extends 'main.html' /}
 <h2>インスタンス生成</h2>
 <div>
+	<p><a href="https://github.com/shunjikonishi/salesforceClient-sample/blob/master/app/models/Salesforce.java">Salesforce.java</a></p>
 	<p>通常SalesforceClientのインスタンス生成はWSDLファイルを引数にして行います。</p>
 	<p>ただ生成時に毎回WSDLをパースするのはコストがかかるので最初にベースインスタンスを生成しておき、それをコピーコンストラクタに渡すのがセオリーです。</p>
 </div>
