--- a/app/views/main.html
+++ b/app/views/main.html
@@ -21,16 +21,17 @@
 						<li><a href="instance">インスタンス生成</a></li>
 						<li><a href="query">クエリ</a></li>
 						<li><a href="sobject">SObject</a></li>
-						<li><a href="instance">Create －親子関係</a></li>
-						<li><a href="instance">Update - 不要なフィールドまで更新される可能性</a></li>
-						<li><a href="instance">Upsert</a></li>
-						<li><a href="instance">Delete</a></li>
-						<li><a href="instance">SQLライクな更新</a></li>
-						<li><a href="instance">インポート</a></li>
-						<li><a href="instance">エクスポート</a></li>
-						<li><a href="instance">SQLSync</a></li>
-						<li><a href="instance">ExcelReport</a></li>
-						<li><a href="instance">ここで説明していないものBulk, Metadata, OAuth</a></li>
+						<li><a href="create">Create</a></li>
+						<li><a href="update">Update</a></li>
+						<li><a href="upsert">Upsert</a></li>
+						<li><a href="delete">Delete</a></li>
+						<li><a href="sqllike">SQLライクな更新</a></li>
+						<li><a href="importData">インポート</a></li>
+						<li><a href="exportData">エクスポート</a></li>
+						<li><a href="sqlsync">SQLSync</a></li>
+						<li><a href="excelRerpot">ExcelReport</a></li>
+						<li><a href="other">ここで説明していないものBulk, Metadata, OAuth</a></li>
+						<li><a href="todo">今後の実装予定</a></li>
 					</ul>
 				</div>
 				<div class="col-md-10">
