--- a/app/views/main.html
+++ b/app/views/main.html
@@ -26,11 +26,9 @@
 						<li><a href="upsert">Upsert</a></li>
 						<li><a href="delete">Delete</a></li>
 						<li><a href="sqllike">SQLライクな更新</a></li>
-						<li><a href="importData">インポート</a></li>
-						<li><a href="exportData">エクスポート</a></li>
+						<li><a href="importAndExport">importとexport</a></li>
 						<li><a href="sqlsync">SQLSync</a></li>
-						<li><a href="excelRerpot">ExcelReport</a></li>
-						<li><a href="other">ここで説明していないものBulk, Metadata, OAuth</a></li>
+						<li><a href="other">その他</a></li>
 						<li><a href="todo">今後の実装予定</a></li>
 					</ul>
 				</div>
