--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,6 +12,7 @@
 		#{get 'moreScripts' /}
 	</head>
 	<body>
+		<a href="https://github.com/shunjikonishi/salesforceClient-sample"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 		<div class="container">
 			<h1>SalesforceClient Sample</h1>
 			<div class="row">
