--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -11,8 +11,8 @@
 	<p>このため環境変数に以下の3つの変数を設定する必要があります。</p>
 	<ul>
 		<li>SALESFORCE_USERNAME=API接続に使用するユーザー名</li>
-		<li>SALESFORCE_USERNAME=API接続に使用するユーザーのパスワード</li>
-		<li>SALESFORCE_USERNAME=API接続に使用するユーザーのセキュリティトークン</li>
+		<li>SALESFORCE_PASSWORD=API接続に使用するユーザーのパスワード</li>
+		<li>SALESFORCE_TOKEN=API接続に使用するユーザーのセキュリティトークン</li>
 	</ul>
 </div>
 <div>
