--- a/app/views/Application/todo.html
+++ b/app/views/Application/todo.html
@@ -8,6 +8,8 @@
 		<li>SObjectDefにDetailUriやEditUriなどの固有情報のgetterを追加する</li>
 		<li>CSVとExcelのImportとExport(BulkAPI版)の実装</li>
 		<li>MetaDataAPIの実装</li>
+		<li>SqlSyncの逆(Salesforce -> RDB)</li>
+		<li>SObjectサブクラスの自動生成</li>
 	</ul>
 	<p>そのたWSDLにあるオペレーションであっても自分が使おうと思ったことがないメソッドについてはすべて未実装です。(mergeとかsendEmailなど)</p>
 	<p>必要なものは実装するので足りない機能があれば<a href="https://twitter.com/flect_jp">ご連絡</a>ください。</p>
