--- a/app/views/main.html
+++ b/app/views/main.html
@@ -29,6 +29,7 @@
 						<li><a href="sqllike">SQLライクな更新</a></li>
 						<li><a href="importAndExport">importとexport</a></li>
 						<li><a href="sqlsync">SQLSync</a></li>
+						<li><a href="oauth">OAuth</a></li>
 						<li><a href="other">その他</a></li>
 						<li><a href="todo">今後の実装予定</a></li>
 					</ul>
