Add summary description

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,4 +1,9 @@
 #{extends 'main.html' /}
+<div  class="alert alert-success">
+<p>この文書はSalesforceAPIのJavaラッパーである<a href="http://oss.flect.co.jp/libs/ja/flectSalesforce.html">flectSalesforce</a>の使い方を説明するモノです。</p>
+<p>社内向けに書いたので説明の荒いところもありますが、おおよその使い方は理解できると思います。</p>
+<p>また、このアプリケーション自体がPlay1でSalesforceと連携するサンプルになっています。</p>
+</div>
 <h2>前準備</h2>
 <div>
 	<h3>依存性の解決</h3>
