Change OAuth sample

--- a/app/views/Application/sobject.html
+++ b/app/views/Application/sobject.html
@@ -85,4 +85,8 @@ if (createdBy != null) {
 		</table>
 	</div>
 	#{/if}
+	<div class="clearfix"></div>
+	<p class="alert alert-info" style="margin-top:20px;">
+		<a href="oauth">OAuth</a>の説明ページで実際にOAuthでログインして任意の組織のオブジェクトのサブクラスを生成することができます。
+	</p>
 </div>
