--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>SalesforceClient Sample</title>
 		<meta charset="${_response_encoding}">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<title>SalesforceClient Sample</title>
 		<link rel="stylesheet" media="screen" href="@{'/public/javascripts/ext/bootstrap3/css/bootstrap.css'}">
 		<link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
 		#{get 'moreStyles' /}
@@ -29,6 +30,7 @@
 						<li><a href="sqllike">SQLライクな更新</a></li>
 						<li><a href="importAndExport">importとexport</a></li>
 						<li><a href="sqlsync">SQLSync</a></li>
+						<li><a href="sobjectsync">SObjectSync</a></li>
 						<li><a href="oauth">OAuth</a></li>
 						<li><a href="other">その他</a></li>
 						<li><a href="todo">今後の実装予定</a></li>
