--- a/app/views/main.html
+++ b/app/views/main.html
@@ -31,6 +31,7 @@
 						<li><a href="importAndExport">importとexport</a></li>
 						<li><a href="sqlsync">SQLSync</a></li>
 						<li><a href="sobjectsync">SObjectSync</a></li>
+						<li><a href="fixture">Fixture</a></li>
 						<li><a href="oauth">OAuth</a></li>
 						<li><a href="other">その他</a></li>
 						<li><a href="todo">今後の実装予定</a></li>
