Add link to Javadoc

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -35,6 +35,13 @@
 						<li><a href="oauth">OAuth</a></li>
 						<li><a href="other">その他</a></li>
 						<li><a href="todo">今後の実装予定</a></li>
+						<li>JavaDoc
+							<ul>
+								<li><a href="http://oss.flect.co.jp/apidocs/flectSalesforce/index.html" target="_blank">flectSalesforce</a></li>
+								<li><a href="http://oss.flect.co.jp/apidocs/flectSoap/index.html" target="_blank">flectSoap</a></li>
+								<li><a href="http://oss.flect.co.jp/apidocs/flectCommon/index.html" target="_blank">flectCommon</a></li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 				<div class="col-md-10">
